# stark-verifier

./: .gitignore  Cargo.toml  README.md
fri/: fri.py  proofstream.py
merkle_stark_inside_snark/: Cargo.toml
merkle_stark_inside_snark/fri/: field.py  merkle.py  polynomial.py
merkle_stark_inside_snark/merkle_stark__inside_snark/: Cargo.toml
merkle_stark_inside_snark/merkle_stark__inside_snark/src/: lib.rs  merkle.rs  recursion.rs
merkle_stark_inside_snark/src/: group.rs  lib.rs  merkle.rs  recursion.rs
merkle_stark_inside_snark/src/plonky2_semaphore/: access_set.rs  circuit.rs  recursion.rs
merkle_stark_inside_snark/src/snark/: arithmetic_extension.rs  goldilocks.rs  goldilocks_extension.rs  goldilocks_extension_chip.rs  hasher.rs  mod.rs  transcript.rs  types.rs  vanishing_poly.rs  verifier.rs  verifier_api.rs  verifier_circuit.rs
merkle_stark_inside_snark/src/snark/chip/: fri_chip.rs  goldilocks_chip.rs  goldilocks_extension_algebra_chip.rs  goldilocks_extension_chip.rs  hasher_chip.rs  merkle_proof_chip.rs  mod.rs  transcript_chip.rs  vector_chip.rs  vector_chip_wrong.rs
merkle_stark_inside_snark/src/snark/chip/plonk/: mod.rs  plonk_verifier_chip.rs  vanishing_poly.rs
merkle_stark_inside_snark/src/snark/chip/plonk/gates/: arithmetic.rs  arithmetic_extension.rs  base_sum.rs  mod.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon_mds.rs  public_input.rs  reducing.rs  reducing_extension.rs
merkle_stark_inside_snark/src/snark/gates/: arithmetic.rs  constant.rs  mod.rs  noop.rs  public_input.rs
merkle_stark_inside_snark/src/snark/types/: assigned.rs  common_data.rs  mod.rs  proof.rs  verification_key.rs
merkle_stark_inside_snark/src/stark/: group.rs  mock.rs  mod.rs  recursion.rs
semaphore_aggregation/: Cargo.toml  common_data  comparison_common_data  comparison_proof  comparison_verifier_data  final_proof  recursive_common_data  recursive_proof  recursive_verifier_data  verifier_data
semaphore_aggregation/src/: err.json
semaphore_aggregation/src/plonky2_semaphore/: access_set.rs  circuit.rs  mod.rs  recursion.rs  signal.rs
semaphore_aggregation/src/snark/: mod.rs  verifier_api.rs  verifier_circuit.rs
semaphore_aggregation/src/snark/chip/: fri_chip.rs  goldilocks_chip.rs  hasher_chip.rs
semaphore_aggregation/src/snark/chip/plonk/: plonk_verifier_chip.rs
semaphore_aggregation/src/snark/chip/plonk/gates/: arithmetic.rs  base_sum.rs  comparison_gate.rs  constant.rs  coset_interpolation_gate.rs  mod.rs  noop.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  u32_add_many.rs  u32_arithmetic.rs
semaphore_aggregation/src/snark/types/: assigned.rs  common_data.rs  mod.rs  proof.rs  verification_key.rs
semaphore_aggregation/src/snark/utils/: fft.rs
src/: lib.rs
src/plonky2_semaphore/: access_set.rs  circuit.rs  mod.rs  recursion.rs  wrapper.rs
src/plonky2_verifier/: verifier_api.rs  verifier_circuit.rs
src/plonky2_verifier/bn245_poseidon/: mod.rs  native.rs  value.rs
src/plonky2_verifier/chip/: fri_chip.rs  goldilocks_chip.rs  goldilocks_extension_algebra_chip.rs  goldilocks_extension_chip.rs  hasher_chip.rs  merkle_proof_chip.rs  mod.rs  public_inputs_hasher_chip.rs  transcript_chip.rs  vector_chip.rs
src/plonky2_verifier/chip/native_chip/: all_chip.rs  arithmetic_chip.rs  poseidon_bn254_chip.rs  test_utils.rs  utils.rs
src/plonky2_verifier/chip/plonk/: plonk_verifier_chip.rs  vanishing_poly.rs
src/plonky2_verifier/chip/plonk/gates/: arithmetic.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  gate_test.rs  mod.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs
src/plonky2_verifier/chip/poseidon_spec/: matrix.rs  mod.rs  spec.rs
src/plonky2_verifier/context/: mod.rs
src/plonky2_verifier/types/: assigned.rs  common_data.rs  mod.rs  proof.rs  verification_key.rs
src/snark/: mod.rs  verifier_api.rs  verifier_circuit.rs
src/snark/bn245_poseidon/: constants.rs  native.rs  plonky2_config.rs  value.rs
src/snark/chip/: fri_chip.rs  goldilocks_chip.rs  goldilocks_extension_algebra_chip.rs  goldilocks_extension_chip.rs  hasher_chip.rs  merkle_proof_chip.rs  mod.rs  public_inputs_hasher_chip.rs  transcript_chip.rs  vector_chip.rs
src/snark/chip/native_chip/: all_chip.rs  arithmetic_chip.rs  mod.rs  poseidon_bn254_chip.rs  test_utils.rs  utils.rs
src/snark/chip/plonk/: mod.rs  plonk_verifier_chip.rs  vanishing_poly.rs
src/snark/chip/plonk/gates/: arithmetic.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  gate_test.rs  mod.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs
src/snark/chip/poseidon_spec/: constants.rs
src/snark/types/: common_data.rs  fri.rs  mod.rs  proof.rs  verification_key.rs
