[package]
name = "merkle_stark_inside_snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/DoHoonKim8/plonky2" }
anyhow = "1.0.56"
lazy_static = "1.4.0"
halo2curves = { git = "https://github.com/DoHoonKim8/halo2curves.git" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["dev-graph"], tag = "v2022_10_22" }
halo2wrong_transcript = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "transcript" }
halo2wrong_maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "maingate" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "halo2wrong" }
poseidon = {git = 'https://github.com/privacy-scaling-explorations/poseidon.git', tag = "v2022_10_22" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
