[package]
name = "merkle_stark__inside_snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2", branch = "semaphore-example" }
anyhow = "1.0.56"
